--- a/style/gameStyle.css
+++ b/style/gameStyle.css
@@ -1,9 +1,13 @@
 #player-hand
 {
+    position: fixed;
+    bottom: 0%;
+    left: 0%;
     display: block;
     width: 100%;
     height: 300px;
     background: url(handBG.jpg);
+    color:rgb(255, 214, 163);
 }
 .card
 {
@@ -13,6 +17,26 @@
     display: inline-block;
     width: 110px;
     height: 200px;
-    border: 3px, solid, black;
+
+    border: 2px solid black;
+
+    box-shadow: 3px 3px 3px black;
+
     background-color: brown;
+    color: black;
+}
+
+#remainingTurn
+{
+    position: fixed;
+    top: 3%;
+    right: 3%;
+}
+
+#nextTurn
+{
+    right: 3%;
+    bottom: 5%;
+    position: fixed;
+
 }
