--- a/style/gameStyle.css
+++ b/style/gameStyle.css
@@ -5,7 +5,7 @@
     left: 0%;
     display: block;
     width: 100%;
-    height: 300px;
+    height: 30%;
     background: url(handBG.jpg);
     color:rgb(255, 214, 163);
 
@@ -41,4 +41,35 @@
     bottom: 5%;
     position: fixed;
 
+}
+
+
+#Board
+{
+    position: fixed;
+    left: 0%;
+    top: 0%;
+    display: block;
+    background-color: aqua;
+    width: 100%;
+    height: 70%;
+
+}
+
+#Deputies
+{
+    color: rgb(255, 115, 0);
+    position: fixed;
+    background-color: rgb(0, 0, 0);
+    width: 100%;
+    height: 35%;
+}
+
+#Buildings
+{
+    top: 35%;
+    position: fixed;
+    background-color: rgb(255, 115, 0);
+    width: 100%;
+    height: 35%;
 }
