--- a/style/gameStyle.css
+++ b/style/gameStyle.css
@@ -53,23 +53,23 @@
     background-color: aqua;
     width: 100%;
     height: 70%;
+    background-image: url(BuildBG.jpg)
 
 }
 
 #Deputies
 {
-    color: rgb(255, 115, 0);
     position: fixed;
-    background-color: rgb(0, 0, 0);
     width: 100%;
     height: 35%;
+    border-top: 2px solid black;
 }
 
 #Buildings
 {
     top: 35%;
     position: fixed;
-    background-color: rgb(255, 115, 0);
     width: 100%;
     height: 35%;
+    border-top: 2px solid black;
 }
