--- a/style/gameStyle.css
+++ b/style/gameStyle.css
@@ -1,3 +1,4 @@
+
 #player-hand
 {
     position: fixed;
@@ -50,11 +51,9 @@
     left: 0%;
     top: 0%;
     display: block;
-    background-color: aqua;
     width: 100%;
     height: 70%;
-    background-image: url(BuildBG.jpg)
-
+    background-image: url(BuildBG.jpg);
 }
 
 #Deputies
@@ -72,4 +71,20 @@
     width: 100%;
     height: 35%;
     border-top: 2px solid black;
+}
+
+
+#print
+{
+
+    position: fixed;
+    color: black;
+    display: block;
+    z-index: 7777;
+    width: 50%;
+    height: 50%;
+    left: 25%;
+    top: 25%;
+    text-align: center;
+    text-shadow: 3px 3px 3px gray;
 }
