--- a/style/gameStyle.css
+++ b/style/gameStyle.css
@@ -106,3 +106,20 @@
     color: black;
 
 }
+
+.deputy
+{
+    text-align: center;
+    padding: 20px;
+    margin: 20px;
+    display: inline-block;
+    width: 110px;
+    height: 200px;
+
+    border: 2px solid black;
+
+    box-shadow: 3px 3px 3px black;
+
+    background-color: brown;
+    color: black;
+}
