--- a/style/gameStyle.css
+++ b/style/gameStyle.css
@@ -1,4 +1,6 @@
-
+body{
+font-family: system-ui;
+}
 #player-hand
 {
     position: fixed;
@@ -102,7 +104,7 @@
 
     box-shadow: 3px 3px 3px black;
 
-    background-color: brown;
+    background-color:  rgb(185, 67, 67);
     color: black;
 
 }
@@ -120,6 +122,12 @@
 
     box-shadow: 3px 3px 3px black;
 
-    background-color: brown;
+    background-color:  rgb(185, 67, 67);
     color: black;
+}
+
+h1{
+    background: url(marbleBG.png);
+    border: 3px solid black;
+    box-shadow: 3px 3px 3px black;
 }
